# ctf-bot

./: .gitignore  README.md  __main__.py  app.py  command.py  config.yml  logger.py  pyproject.toml  requirements.txt
commands/: asciify.py
commands/core/: CmdHelper.py  CmdProcessor.py
ctf-bot/: __main__.py  logger.py
ctf-bot/commands/: about.py
ctf-bot/commands/crypto/: asciify.py
mixin/pycord/: client.py
